apps/04-grafana-operator/servicemonitor.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-operator
  namespace: "monitoring"
  labels:
    app.kubernetes.io/instance: grafana-operator
spec:
  clusterIP: None
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: metrics
      protocol: TCP
      name: metrics
  selector:
    app.kubernetes.io/instance: grafana-operator
